Fix bugs, collapse function fully works

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,7 +13,7 @@
     margin-top: 2px;
 }
 
-.json2html-spoiler-trigger {
+.json2html-spoiler-trigger--collapsed {
     display: inline-block;
     margin-right: -7px;
     position: relative;
@@ -25,6 +25,13 @@
 }
 
 .json2html-spoiler-trigger--uncollapsed {
+    display: inline-block;
+    margin-right: -7px;
+    position: relative;
+    right: 9px;
+    color: #585858;
+    font-size: 10px;
+    transition: 0.3s ease;
     transform: rotate(90deg);
     bottom: -1px;
 } 
